[tool.black]
target-version =  ['py36', 'py37', 'py38']
include = '''
^/(
    setup.py
    | (qtrio|docs)/.*\.pyi?
)$
'''
exclude = '''
^/(
    qtrio/_version.py
)$
'''

[build-system]
requires = [
    "setuptools >= 47.3.1",
    "versioneer-518 == 0.18",
    "wheel >= 0.34.2",
]
build-backend = "setuptools.build_meta"
