[tool:pytest]
xfail_strict = true
faulthandler_timeout=60
junit_family = xunit2
trio_mode = true
trio_run = qtrio

[metadata]
name = qtrio
version = attr: qtrio._version.__version__
author = Kyle Altendorf
author_email = sda@fstab.net
license = MIT -or- Apache License 2.0
url = https://github.com/altendky/qtrio
project_urls =
    Documentation = https://qtrio.readthedocs.io/
    Chat = https://gitter.im/python-trio/general
    Forum = https://trio.discourse.group/
    Issues = https://github.com/altendky/qtrio/issues
    Repository = https://github.com/altendky/qtrio
    Tests = https://github.com/altendky/qtrio/actions?query=branch%%3Amaster
    Coverage = https://codecov.io/gh/altendky/qtrio
    Distribution = https://pypi.org/project/qtrio
description = a library bringing Qt GUIs together with ``async`` and ``await`` via Trio
long_description = file: README.rst
keywords = async, io, Trio, GUI, Qt, PyQt5, PySide2
classifiers =
        License :: OSI Approved :: MIT License
        License :: OSI Approved :: Apache Software License
        Framework :: Trio
        Operating System :: POSIX :: Linux
        Operating System :: MacOS :: MacOS X
        Operating System :: Microsoft :: Windows
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: Implementation :: CPython
        Development Status :: 3 - Alpha
        Intended Audience :: Developers
        Topic :: Software Development :: User Interfaces

[options]
include_package_data = True
install_requires=
    async_generator
    attrs
    decorator
    outcome
    qtpy
    # trio >= 0.16 for guest mode
    trio >= 0.16
    # python_version < '3.8' for `Protocol`
    typing-extensions; python_version < '3.8'
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    qtrio = qtrio._cli:cli

[options.extras_require]
pyqt5 =
    # >= 5.15.1 for https://www.riverbankcomputing.com/pipermail/pyqt/2020-July/043064.html
    pyqt5 >= 5.15.1
    pyqt5-stubs
pyside2 =
    # != 5.15.2 for https://bugreports.qt.io/browse/PYSIDE-1431
    pyside2 != 5.15.2
cli =
    click
examples =
    %(cli)s
    httpcore
    httpx
    hyperlink
testing =
    %(s_pytest_trio)s
p_checks =
    black
    check-manifest
    flake8
    mypy
    pytest
    quart_trio
    %(s_towncrier)s
    %(examples)s
p_docs =
    # >= 3.2: https://github.com/sphinx-doc/sphinx/issues/8008
    # >= 3.2.1: https://github.com/sphinx-doc/sphinx/issues/8124
    # != 3.4.0, != 3.4.1: https://github.com/sphinx-doc/sphinx/issues/8567
    sphinx >= 3.2.1, != 3.4.0, != 3.4.1
    sphinx-autodoc-typehints
    sphinx-qt-documentation >= 0.3
    sphinx_rtd_theme
    sphinxcontrib-trio
    %(s_towncrier)s
p_tests =
    %(cli)s
    %(examples)s
    click
    coverage
    %(s_pytest)s
    pytest-cov
    pytest-faulthandler
    pytest-qt
    %(s_pytest_trio)s
    pytest-xdist[psutil] ~= 2.2
    pytest-xvfb; sys_platform == "linux"
    %(s_quart_trio)s
s_pytest =
    # >= 6 for type hints
    pytest >= 6
s_pytest_trio =
    # >= 0.7.0 for trio_run configuration support
    pytest-trio >= 0.7.0
s_quart_trio =
    quart-trio; python_version >= "3.7"
s_towncrier =
    # >= 19.9.0rc1 for https://github.com/twisted/towncrier/issues/144
    towncrier >= 19.9.0rc1
