[metadata]
name = qtrio
version = attr: qtrio._version.__version__
author = Kyle Altendorf
author_email = sda@fstab.net
license = MIT -or- Apache License 2.0
url = https://github.com/altendky/qtrio
project_urls =
    Documentation = https://qtrio.readthedocs.io/
    Chat = https://gitter.im/python-trio/general
    Forum = https://trio.discourse.group/
    Issues = https://github.com/altendky/qtrio/issues
    Repository = https://github.com/altendky/qtrio
    Tests = https://github.com/altendky/qtrio/actions?query=branch%%3Amain
    Coverage = https://codecov.io/gh/altendky/qtrio
    Distribution = https://pypi.org/project/qtrio
description = a library bringing Qt GUIs together with ``async`` and ``await`` via Trio
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = async, io, Trio, GUI, Qt, PyQt5, PySide2
classifiers =
        License :: OSI Approved :: MIT License
        License :: OSI Approved :: Apache Software License
        Framework :: Trio
        Operating System :: POSIX :: Linux
        Operating System :: MacOS :: MacOS X
        Operating System :: Microsoft :: Windows
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: Implementation :: CPython
        Development Status :: 3 - Alpha
        Intended Audience :: Developers
        Topic :: Software Development :: User Interfaces

[options]
include_package_data = True
install_requires=
    async_generator
    attrs
    decorator
    outcome
    qts ~= 0.2.0
    # trio >= 0.16 for guest mode
    trio >= 0.16
    trio-typing ~= 0.7.0
    # python_version < '3.8' for `Protocol`
    typing-extensions; python_version < '3.8'
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    qtrio = qtrio._cli:cli

[options.extras_require]
pyqt5 =
    # >= 5.15.1 for https://www.riverbankcomputing.com/pipermail/pyqt/2020-July/043064.html
    pyqt5 ~=5.15.1
    pyqt5-stubs ~=5.15.2
pyside2 =
    # != 5.15.2, != 5.15.2.1 for https://bugreports.qt.io/browse/PYSIDE-1431
    pyside2 ~= 5.15, != 5.15.2, != 5.15.2.1
cli =
    click ~= 8.1
examples =
    %(cli)s
    httpcore ~= 0.16
    httpx ~= 0.23
    hyperlink ~= 21.0.0
testing =
    %(s_pytest_trio)s
p_checks =
    black == 22.10.0
    check-manifest ~= 0.46.0
    flake8 ~= 3.8
    mypy == 0.991
    %(s_pytest)s
    %(s_quart_trio)s
    %(s_towncrier)s
    %(examples)s
p_docs =
    # ~= 4.0: working as of 2021.07.06
    # >= 4.0.0b2 for https://github.com/sphinx-doc/sphinx/issues/8127
    sphinx ~= 5.1, >= 4.0.0b2
    sphinx-autodoc-typehints ~= 1.11
    sphinx-qt-documentation ~= 0.4.0
    sphinx_rtd_theme ~= 1.0
    sphinxcontrib-trio ~= 1.1
    %(s_towncrier)s
p_tests =
    %(cli)s
    %(examples)s
    coverage ~= 6.5
    %(s_pytest)s
    pytest-cov ~= 4.0
    pytest-faulthandler ~= 2.0
    pytest-qt ~= 4.2
    %(s_pytest_trio)s
    pytest-xdist[psutil] ~= 2.2
    pytest-xvfb ~= 2.0; sys_platform == "linux"
    %(s_quart_trio)s
s_pytest =
    # >= 6 for type hints
    pytest ~= 7.2
s_pytest_trio =
    # >= 0.7.0 for trio_run configuration support
    pytest-trio >= 0.7.0
s_quart_trio =
    quart-trio ~= 0.10.0
    quart ~= 0.18.3
s_towncrier =
    # >= 19.9.0rc1 for https://github.com/twisted/towncrier/issues/144
    # >= 21.3.0 for https://github.com/twisted/towncrier/pull/271
    # >= 21.3.0 for https://github.com/twisted/towncrier/pull/170
    towncrier >= 21.3.0
